# will-it-fit

./: .gitignore  README.md  index.html
.github/workflows/: web.yml
assets/: index-2242ecf1.css  index-4ce14b4d.css  main-028e3337.js  main-176f456a.js  main-4c8a1dba.js  main-52a4e42c.js  main-7df3f1e3.js  main-7f77a7ff.js  main-9f4f12c9.js  main-a9603959.js  main-f18bdacd.js  main-f1ba6928.js  main-f358519e.js
backend/: Cargo.toml
backend/src/: lib.rs  negative_space.rs  render.rs  timer.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/tests/: test_inspire_classifier.rs  utils.rs
data_prep/: car_ownership.sh  inspire.sh  inspire_all_uk.sh  inspire_one_area.sh  os_mastermap_topo.sh
data_prep/dissolver/: Cargo.toml
data_prep/dissolver/src/: main.rs
data_prep/fix_osmm/: Cargo.toml
data_prep/fix_osmm/src/: main.rs  wrap.rs
data_prep/merge_files/: Cargo.toml
data_prep/merge_files/src/: main.rs
pavement_parking/: Cargo.toml  README.md  car_ownership.sh  get_boundaries.sh
pavement_parking/src/: boundaries.rs  census_areas.rs  main.rs  ratings.rs  roads.rs
pavement_parking/web/: index.html  package-lock.json  package.json  vite.config.ts
pavement_parking/web/src/: About.svelte  App.svelte  MapContents.svelte  OutputAreas.svelte  PavementLayers.svelte  RoadFilters.svelte  RoadPopup.svelte  StreetFilters.svelte  SummaryLayers.svelte  types.ts
snap/: Cargo.toml
snap/src/: main.rs  network.rs
test_cases/: get_test_data.sh  test_case_1_bounding_box.geojson  test_case_2_bounding_box.geojson  test_case_2_expected_non_road_space.geojson  test_case_3_bounding_box.geojson  test_case_4_bounding_box.geojson  test_case_4_expected_non_road_space.geojson  test_case_4_expected_road_space.geojson  test_case_5_bounding_box.geojson  test_cases.md
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.svelte  DrawRoute.svelte  input.ts  lanes.ts  match_area.ts  worker.ts
web/src/sketch/: RouteSnapperLayer.svelte  RouteSnapperLoader.svelte
widths/: Cargo.toml
widths/src/: lib.rs  timer.rs
