[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
flatgeobuf = { path = "/home/dabreegster/Downloads/flatgeobuf/src/rust" }
geo = "0.28.0"
geojson = { version = "0.24.1", features = ["geo-types"] }
geozero = { version = "0.13.0", default-features = false, features = ["with-geo"] }
log = "0.4.20"
petgraph = "0.6.5"
serde = "1.0.188"
serde_json = "1.0.117"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.64", features = ["console"] }

# For local development, build dependencies in release mode once, but otherwise
# use dev profile and avoid wasm-opt.
[profile.dev.package."*"]
opt-level = 3
