[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
cavalier_contours = "0.4.0"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
flatgeobuf = { git = "https://github.com/michaelkirk/flatgeobuf/", branch = "mkirk/rust-fix-requests" }
geo = "0.28.0"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
geozero = { version = "0.13.0", default-features = false, features = ["with-geo"] }
js-sys = "0.3.69"
log = "0.4.20"
serde = "1.0.188"
serde_json = "1.0.117"
utils = { git = "https://github.com/a-b-street/utils" }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.64", features = ["console"] }
widths = { path = "../widths" }

# For local development, build dependencies in release mode once, but otherwise
# use dev profile and avoid wasm-opt.
[profile.dev.package."*"]
opt-level = 3
