[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
flatgeobuf = "4.4.0"
geo = "0.29.2"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
geozero = { version = "0.14.0", default-features = false, features = ["with-geo"] }
serde_json = "1.0.117"
utils = { git = "https://github.com/a-b-street/utils" }
widths = { path = "../widths" }
