[package]
name = "widths"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
geo = "0.28.0"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
js-sys = "0.3.69"
log = "0.4.20"
rstar = "0.12.0"
serde_json = "1.0.117"
utils = { git = "https://github.com/a-b-street/utils" }
wasm-bindgen = "0.2.87"
web-time = "1.1.0"
