[package]
name = "dissolver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
geo = { git = "https://github.com/RobWalt/geo", branch = "feat/spade-boolops" }
geojson = "0.24.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.10.0"
rstar = "0.12.0"
serde_json = "1.0.120"
union-find-rs = "0.2.1"
